refactor!: pay down architecture debt and make test-mode chaos opt-in
Configuration
- split the configuration: GoblinConfig is now read at runtime (every
  assault setting, enabled and target.level can be overridden at
  startup); the include/exclude package and exclude-annotation rules
  move to GoblinTargetingConfig, fixed at build time since they drive
  the interceptor weaving
- add quarkus.goblin.test.enabled (default false): chaos no longer
  activates in @QuarkusTest unless opted in; the engine still loads
  its configuration so a test can switch chaos on with
  AssaultEngine.setActive(true), and an INFO log explains it

No more static state
- remove GoblinRecorder and the static config / optional hooks of
  AssaultEngine: the configuration is injected, the installed layer
  hooks come from a GoblinLayerHooks synthetic bean (never registered
  in production builds)

Single source of truth
- TargetRules: one implementation of the targeting rules shared by the
  build-time weaving and the inbound REST filter; the filter caches the
  eligibility per resource method instead of reflecting per request
- AssaultSource carried by every AssaultRecord (server, service,
  rest-client, webclient, database, messaging); metrics and tracing
  read it instead of parsing the history identifier; SERVICE-layer
  assaults are now tagged "service"; source exposed in the JSON-RPC
  history
- Enums.parse and ResponseHeaderAction.parse replace the duplicated
  enum parsing of the state file and the JSON-RPC service

Atomic configuration
- MutableAssaultConfig publishes an immutable AssaultSettings state
  per change (copy-on-write): profile switches, resets and imports are
  atomic; hooks read one snapshot() per request or call
- public API of MutableAssaultConfig and of custom assaults unchanged

Persistence
- GoblinStatePersistence uses Vert.x JSON (523 -> 330 lines) and writes
  structured JSON; state files written by earlier versions are still
  read; an unreadable file falls ba